# primme-hs

./: .travis.yml  CHANGELOG.md  README.md  Setup.hs  Singularity  build.sh  build_primme.sh  cabal.project  configure  primme-hs.cabal
.github/workflows/: ci.yml
cbits/: common.h.patch  primme.h.patch  wrapper.c  wrapper.h
example/dense/: Main.hs
src/: PrimmeHs.hs
src/Numeric/: PRIMME.hs
src/Numeric/PRIMME/: Context.hs  Dense.hs  Internal.chs  Monitor.hs  Operator.hs  Options.hs  PRIMME.hs  Types.hs
