cabal-version:         2.4
name:                  primme-hs
version:               0.0.1.0
synopsis:              Haskell wrapper for PRIMME library
description:           Haskell wrapper for PRIMME library
homepage:              https://github.com/twesterhout/primme-hs
bug-reports:           https://github.com/twesterhout/primme-hs/issues
license:               BSD-3-Clause
license-file:          LICENSE
author:                Tom Westerhout
maintainer:            Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:             2020 Tom Westerhout
build-type:            Custom
extra-doc-files:       README.md
                       CHANGELOG.md
tested-with:           GHC == 8.8.4
extra-source-files:    build_primme.sh
                       cbits/wrapper.h
                       cbits/primme.h.patch
                       cbits/common.h.patch

flag use_shared_libs
  description:         Use shared libprimme (useful for development since GHCi does not support loading static libraries).
  default:             False

flag use_system_libprimme
  description:         Use libprimme that is installed on the system.
  default:             False

flag use_openblas
  description:         Link with OpenBLAS library.
  default:             True

flag use_accelerate
  description:         Link with the Accelerate Framework.
  default:             True



custom-setup
  setup-depends:       base >= 4.13.0.0 && < 5, Cabal >= 2.4, directory >= 1.2.1

source-repository head
  type:                git
  location:            https://github.com/twesterhout/primme-hs.git

common common-options
  build-depends:       base >= 4.13.0.0 && < 5
                     , vector
                     , text
                     , safe-exceptions
                     , co-log-core

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       FlexibleContexts
                       FlexibleInstances
                       TypeFamilies
                       TypeApplications
                       ScopedTypeVariables
                       OverloadedStrings
                       RankNTypes
                       GADTs


library
  import:              common-options
  build-tool-depends:  c2hs:c2hs >= 0.28.6
  hs-source-dirs:      src
  c-sources:           cbits/wrapper.c
  exposed-modules:     Numeric.PRIMME
                     , Numeric.PRIMME.Monitor
                     , Numeric.PRIMME.Internal
  extra-libraries:     primme
  include-dirs:        cbits

  if (os(darwin) || os(osx)) && flag(use_accelerate)
      frameworks:      Accelerate
  else
    if flag(use_openblas)
      pkgconfig-depends: openblas
      -- extra-libraries: openblas
    else
      extra-libraries: lapack
                       blas


executable example1
  import:              common-options
  hs-source-dirs:      example/dense
  main-is:             Main.hs
  build-depends:       primme-hs

test-suite primme-hs-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       primme-hs
                     , hspec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
